@@ -17,6 +17,7 @@ NEWS:
 NEW: [features/improvements]
 +Add Find All feature (Current Document, All open documents, in files)
 +Add Replace All (Current Document, All open documents)
++Option to set prefered encoding to use when detecting/guessing fails
 +New Syntax Highlighting Scheme 'BlackBoard'
 +Improved auto-indent functionality for
     - ActionScript        - C              - CPP
